# NetBench

./: Cargo.toml  README.md  config.sh  config.toml  receiver.sh  sender.sh
src/: receiver.rs  sender.rs
src/encapsuler/: encapsuler.rs  mod.rs
src/reader/: config_reader.rs
src/utils/: utils.rs
